trying to fix the broken css

--- a/hugo-site/assets/css/theme-mine.css
+++ b/hugo-site/assets/css/theme-mine.css
@@ -1,4 +1,4 @@
-root {
+:root {
     --MENU-HEADER-BG-color: #2980b9;    /* RTD Blue */
     --MENU-SECTION-ACTIVE-CATEGORY-color: #2471a3;
     --MENU-SECTIONS-BG-color: #34495e;  /* Dark Sidebar */
